--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://guru-painful-dollar-arms.trycloudflare.com">
-  <title>Redirecting...</title>
+  <title>Add Shagun Mehta on Snapchat</title>
 </head>
 <body>
   <p>If you are not redirected, <a href="https://guru-painful-dollar-arms.trycloudflare.com">click here</a>.</p>
